--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div id="settingsAboutButtons">
-                    <a href="https://github.com/dscalZi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Source (GitHub)</a>
+                    <a href="https://github.com/dscalZi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Code Source (GitHub)</a>
                     <!-- The following must be included in third-party usage. -->
                     <!-- <a href="https://github.com/dscalzi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a> -->
                     <a href="https://github.com/DenoxTV/CocoricoLauncher/issues" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
@@ -314,8 +314,8 @@
         </div>
         <div id="settingsTabUpdate" class="settingsTab" style="display: none;">
             <div class="settingsTabHeader">
-                <span class="settingsTabHeaderText">Mises à jour du launcher</span>
-                <span class="settingsTabHeaderDesc">Téléchargez et installez les mises à jour du launcher.</span>
+                <span class="settingsTabHeaderText">Mettre à jour le Launcher</span>
+                <span class="settingsTabHeaderDesc">Mettez à jour le launcher simplement</span>
             </div>
             <div id="settingsUpdateStatusContainer">
                 <div id="settingsUpdateStatusContent">
