--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -8,7 +8,7 @@
         <span id="welcomeHeader">Bienvenue sur le launcher de CocoricoMC</span>
         <span id="welcomeDescription">Bienvenue sur un serveur PvP-Faction/Créatif/Mini-Jeux moddés</span>
         <br>
-        <span id="welcomeDescCTA">Encore quelques cliqus pour accéder à CocoricoMC</span>
+        <span id="welcomeDescCTA">Encore quelques cliques pour accéder à CocoricoMC</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUE
