--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -110,26 +110,26 @@
 
                     </div>
                 </div>
-                <div id="settingsOptModsContainer">
-                    <div class="settingsModsHeader">Optional Mods</div>
-                    <div id="settingsOptModsContent">
+                <div id="settingsOptModsContainer" style="display: none">
+                    <div class="settingsModsHeader" style="display: none">Optional Mods</div>
+                    <div id="settingsOptModsContent" style="display: none">
                         
                     </div>
                 </div>
-                <div id="settingsDropinModsContainer">
-                    <div class="settingsModsHeader">Drop-in Mods</div>
+                <div id="settingsDropinModsContainer" style="display: none">
+                    <div class="settingsModsHeader" style="display: none">Drop-in Mods</div>
                     <button id="settingsDropinFileSystemButton">+ Add Mods <span id="settingsDropinRefreshNote">(F5 to Refresh)</span></button>
-                    <div id="settingsDropinModsContent">
+                    <div id="settingsDropinModsContent"style="display: none">
                         
                     </div>
                 </div>
                 <div id="settingsShadersContainer">
-                    <div class="settingsModsHeader">Shaderpacks</div>
-                    <div id="settingsShaderpackDesc">Activez ou desactivez les shaderspacks.</div>
-                    <div id="settingsShaderpackWrapper">
+                    <div class="settingsModsHeader" style="display: none">Shaderpacks</div>
+                    <div id="settingsShaderpackDesc" style="display: none">Activez ou desactivez les shaderspacks.</div>
+                    <div id="settingsShaderpackWrapper" style="display: none">
                         <button id="settingsShaderpackButton"> + </button>
-                        <div class="settingsSelectContainer">
-                            <div class="settingsSelectSelected" id="settingsShadersSelected">Séléctionner le Shaderpack</div>
+                        <div class="settingsSelectContainer" style="display: none">
+                            <div class="settingsSelectSelected" id="settingsShadersSelected" style="display: none">Séléctionner le Shaderpack</div>
                             <div class="settingsSelectOptions" id="settingsShadersOptions" hidden>
 
                             </div>
