add of a microsoft button for login

--- a/app/login.ejs
+++ b/app/login.ejs
@@ -79,7 +79,7 @@
         </div>
       </button>
       <br />
-      <button id="loginMSButton">Connection avec Microsoft</button>
+      <button id="loginMSButton"><img src="assets/images/microsoft.png"></button>
       <div id="loginDisclaimer">
         <span class="loginSpanDim" id="loginRegisterSpan">
           <a href="https://www.minecraft.net/en-us/store/minecraft-java-edition"
@@ -90,7 +90,7 @@
           Votre Mot de Passe est uniquement envoyé, et n'est jamais enregistré.
         </p>
         <p class="loginDisclaimerText">
-          CocoricoMC n'est pas affilié à Mojang AB.
+          CocoricoMC n'est pas affilié à Mojang AB et Microsoft
         </p>
       </div>
     </form>
